// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`job summary > renders a failing ratchet report 1`] = `
"## 🌍 xcstrings-lint — failed

5 new issues vs \`main\`.

Checked 1 catalog across 3 languages.

### New issues

| Languages | Missing | Empty | Total |
|---|---|---|---|
| \`ja\` | 3 | — | **3** |
| \`fr\` | 1 | 1 | **2** |
| \`de\` | — | — | ✓ clean |

<details><summary><b>Missing translations</b> · 4</summary>

| Key | Languages |
|---|---|
| \`payment_save_card_subtitle\` | \`fr\`, \`ja\` |
| \`payment_cvv_hint\` | \`ja\` |
| \`payment_save_card_title\` | \`ja\` |

</details>

<details><summary><b>Empty values</b> · 1</summary>

| Key | Languages |
|---|---|
| \`payment_cvv_hint\` | \`fr\` |

</details>

### Coverage

| Language | Before | After | Δ | New issues |
|---|---|---|---|---|
| \`de\` | 100% | 100% | — | 0 |
| \`fr\` | 100% | 33.3% | 🔻 66.7% | **2** |
| \`ja\` | 100% | 0% | 🔻 100% | **3** |"
`;

exports[`job summary > renders an absolute-mode report 1`] = `
"## 🌍 xcstrings-lint — failed

1 language below the 100% threshold.

Checked 1 catalog across 2 languages.

### Issues

| Languages | Missing | Total |
|---|---|---|
| \`fr\` | 1 | **1** |
| \`de\` | — | ✓ clean |

<details><summary><b>Missing translations</b> · 1</summary>

| Key | Languages |
|---|---|
| \`b\` | \`fr\` |

</details>

### Coverage

| Language | Coverage | Threshold | Status |
|---|---|---|---|
| \`de\` | 100% | 100% | ✓ |
| \`fr\` | 50% | 100% | ✕ below |"
`;

exports[`sticky comment > renders a failing ratchet report 1`] = `
"### 🌍 xcstrings-lint — **failed**

**5 new issues** vs \`main\` — 3 keys across 2 languages.

| Languages | Missing | Empty | Total |
|---|---|---|---|
| \`ja\` | 3 | — | **3** |
| \`fr\` | 1 | 1 | **2** |
| \`de\` | — | — | ✓ clean |

<details><summary><b>Missing translations</b> · 4</summary>

| Key | Languages |
|---|---|
| \`payment_save_card_subtitle\` | \`fr\`, \`ja\` |
| \`payment_cvv_hint\` | \`ja\` |
| \`payment_save_card_title\` | \`ja\` |

</details>

<details><summary><b>Empty values</b> · 1</summary>

| Key | Languages |
|---|---|
| \`payment_cvv_hint\` | \`fr\` |

</details>

<sub>Mode: \`ratchet\` · <!-- xcstrings-lint --></sub>"
`;

exports[`sticky comment > renders a passing ratchet report 1`] = `
"### 🌍 xcstrings-lint — **passed**

No new localization issues vs \`main\`.

<sub>Mode: \`ratchet\` · <!-- xcstrings-lint --></sub>"
`;

exports[`sticky comment > renders a passing report that carries a backlog 1`] = `
"### 🌍 xcstrings-lint — **passed**

No new localization issues vs \`main\`.

<details><summary><b>Pre-existing issues</b> · 7 — not introduced by this PR</summary>

| Languages | Missing | Empty | Total |
|---|---|---|---|
| \`fr\`, \`ja\` | 2 | 1 | **3** |
| \`de\` | — | 1 | **1** |

**Missing translations** · 4

| Key | Languages |
|---|---|
| \`old_a\` | \`fr\`, \`ja\` |
| \`old_b\` | \`fr\`, \`ja\` |

**Empty values** · 3

| Key | Languages |
|---|---|
| \`old_empty\` | all 3 languages |

</details>

<sub>Mode: \`ratchet\` · <!-- xcstrings-lint --></sub>"
`;

exports[`sticky comment > renders an absolute-mode report 1`] = `
"### 🌍 xcstrings-lint — **failed**

**1 issue** — 1 key across 1 language.

| Languages | Missing | Total |
|---|---|---|
| \`fr\` | 1 | **1** |
| \`de\` | — | ✓ clean |

<details><summary><b>Missing translations</b> · 1</summary>

| Key | Languages |
|---|---|
| \`b\` | \`fr\` |

</details>

<sub>Mode: \`absolute\` · <!-- xcstrings-lint --></sub>"
`;
